--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,8 @@
 // components
 @import 'components/buttons';
 @import 'components/select';
+@import 'components/textfelid';
+@import 'components/tags';
 
 // layout
 @import 'layout/header';
