--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -2,69 +2,105 @@
     display: inline-block;
     text-decoration: none;
     border: none;
-    font-weight: 500;
     cursor: pointer;
     transition: all 150ms ease-in-out;
 
-    &-orange-sq{
-        background-color: $orange;
-        color: $white;
-        font-size: 16px;
-        padding: 28px;
-        transition: all 150ms ease-in-out;
-
-        &:hover{
-            // background-color: #FC4F4F;
-
-            background-color: #f84f00;
-        }
-    }
 
     &-blue{
-        background-color: $primary-blue;
-        padding:19px 24px;
-        border-radius: 4px;
+        background-color: $blue;
         color: $white;
-        transition: all 150ms ease-in-out;
+        padding:10px 40px;
+        border-radius: 2px;
+        font-weight: 300;
+        // text-transform: uppercase;
 
         &:hover{
-            // background-image: linear-gradient(90deg, #00C0FF 0%, #FFCF00 49%, #FC4F4F 80%, #00C0FF 100%);
-            // animation:slidebg 6s linear infinite;
-
             background-color: #0c29e6;
         }
     }
 
-    &-black-rounded{
-        background-color: $black;
-        color: $white;
-        fill: $white;
-        border-radius: 29px;
-        padding: 18px 47px;
+    &-white{
+        background-color: $white;
+        color: $black;
+        padding:10px 10px;
+        border-radius: 2px;
+        font-weight: 300;
+        // text-transform: uppercase;
 
-        // border-color: $black 5px solid;
-        // box-shadow: 0 0 40px 40px $black inset, 0 0 0 0 $black;
-        transition: all 150ms ease-in-out;
-        &:hover {
-            // box-shadow: 0 0 10px 0 $black inset, 0 0 10px 4px black;
-            // color: $black;
-            // fill: black;
-
-            // background-color: rgb(0, 0, 0,0.6);
-            // box-shadow: 4px 3px 5px 4px gray;
-            // box-shadow: 4px 3px 11px 3px grey;
-            // border: 2px white solid;
-
-            transform: scale(1.1);
+        &:hover{
+            background-color: #0c29e6;
         }
-          
+    }
 
+    &__icon{
+        height: 20px;
+        width: 20px;
     }
 }
 
+.btn-group--round{
+    // display: inline-block;
+    // font-size: 0;
 
-@keyframes slidebg {
-    to {
-      background-position:20vw;
+    display: inline-flex;
+    border: 1px solid $steel;
+    // border-top-left-radius: 10px;
+    // border-bottom-left-radius: 10px;
+    border-radius: 17px;
+    height: 34px;
+
+    .btn{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: white;
+        border: 1px solid #ededed;
+        padding: 5px;
+
+        &:hover{
+            background-color: #ededed;
+            background-color: $blue;
+            border: 1px solid $blue;
+            .btn__icon{
+                fill: white;
+            }
+        }
+
+        &__icon{
+            fill: $steel;
+        }
+    }
+
+    .btn:first-child{
+        border-top-left-radius: 17px;
+        border-bottom-left-radius: 17px;
+        padding-left: 8px;
+    }
+    .btn:last-child{
+        border-top-right-radius: 17px;
+        border-bottom-right-radius: 17px;
+        padding-right: 8px;
+    }
+}
+
+.btn-group--sqr{
+    display: inline-flex;
+    background-color: #f9f9f9;
+
+    .btn{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 110px;
+        width: 100%;
+        height: 60px;
+
+        &:not(:last-child){
+            border-right: 1px solid #e6e4e4;
+        }
+
+        &:hover{
+            background-color: #d4cfcf;
+        }
     }
 }
