--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -3,6 +3,22 @@
     justify-content: space-between;
     align-items: center;
     padding: 0px 30px;
-    background-color: #C3423F;
+    background-color: $white;
     min-height: 60px;
+
+    &__logo{
+        display: flex;
+        align-items: center;
+        font-size:20px;
+        letter-spacing: 2px;
+        .logo-U{
+            display: inline-block;
+            background-color: black;
+            height:20px;
+            width: 15px;
+            border-bottom-left-radius: 50%;
+            border-bottom-right-radius: 50%;
+            margin-right: 2px;
+        }
+    }
 }
