--- a/src/styles/utilities/_helpers.scss
+++ b/src/styles/utilities/_helpers.scss
@@ -54,3 +54,23 @@
 
 .ai-start{align-items: flex-start;}
 .ai-center{align-items: center;}
+
+
+// colors
+
+.clr-gunmetal{
+    color: $gunmetal;
+}
+
+.clr-cool-gray{
+    color: $cool-gray;
+}
+.fill-cool-gray{
+    fill: $cool-gray;
+}
+.fill-blue{
+    fill: $blue;
+}
+.fill-red{
+    fill: $red;
+}
