--- a/src/styles/utilities/_variables.scss
+++ b/src/styles/utilities/_variables.scss
@@ -1,9 +1,11 @@
 // colors
 $blue:#007aff;
+$red: #BA3B46;
 $steel: #8e8e93;
 $gunmetal: #4c4f59;
 $steel-two:#81869f;
 $battleship-grey: #70727a;
+$cool-gray: #a3a3a8;
 
 $vivid-purple: #9200ff;
 $neon-blue: #00dcff;
@@ -22,5 +24,3 @@ $black-one: #292929;
 $black-two: #151515;
 $yellow: #ffc107;
 $light-purple: #eaedfd;
-// fonts
-$font:'Rubik', sans-serif;
