--- a/src/styles/layout/_other.scss
+++ b/src/styles/layout/_other.scss
@@ -78,11 +78,36 @@
         }
     }
 
+    &__img{
+        position: relative;
+    }
+
+    &__tag{
+        position: absolute;
+        right: 0;
+        width: 12px;
+        height: 12px;
+    }
+
     &__body{
         background-color: $white;
         color: #65676e;
         flex-grow: 1;
         padding: 30px;
         white-space: pre-line;
+    }
+    
+    &__attachments{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+
+    .attachment{
+        display: inline-block;
+        background-color: #f5f5f5;
+        border: 1px solid #e5e5e5;
+        padding: 10px;
+        cursor: pointer;
     }
 }
