dropdown in email reader

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,7 @@
 @import 'components/buttons';
 @import 'components/select';
 @import 'components/textfelid';
+@import 'components/dropdown';
 @import 'components/tags';
 
 // layout
