--- a/src/styles/layout/_other.scss
+++ b/src/styles/layout/_other.scss
@@ -10,6 +10,11 @@
         min-width: 334px;
         background-color: $white;
         overflow-y: auto;
+
+        .unread{
+            font-weight: 700;
+            background-color:#ecefff7a;;
+        }
     }
 
     &__item{
@@ -67,6 +72,7 @@
         align-items: center;
         padding: 40px 30px;
         position: relative;
+        flex-wrap: wrap;
         &::after{
             content: '';
             display: block;
@@ -80,6 +86,7 @@
 
     &__img{
         position: relative;
+        min-width: 54px;
     }
 
     &__tag{
