only background needs to change

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -3,7 +3,7 @@
     text-decoration: none;
     border: none;
     cursor: pointer;
-    transition: all 150ms ease-in-out;
+    transition: background 150ms ease-in;
 
 
     &-blue{
