--- a/src/styles/components/_textfelid.scss
+++ b/src/styles/components/_textfelid.scss
@@ -6,8 +6,9 @@
         outline: none;
         border: none;
         // box-shadow: 0 0 0 1px rgba($color: #000000, $alpha: 0.7);
-        border: 1px solid $steel;
+        border: 1px solid rgba($color: $black, $alpha: 0.07);
         background-color: $white;
+        color: $cool-gray;
         min-width: 294px;
         height: 30px;
         padding-left: 35px;
@@ -15,7 +16,7 @@
     }
 
     &__icon{
-        fill: #000000;
+        fill: rgba(0, 0, 0, 0.3);
         width: 14px;
         height: 14px;
         position: absolute;
