--- a/src/styles/layout/_other.scss
+++ b/src/styles/layout/_other.scss
@@ -114,7 +114,8 @@
         display: inline-block;
         background-color: #f5f5f5;
         border: 1px solid #e5e5e5;
-        padding: 10px;
+        padding: 10px 15px;
         cursor: pointer;
+        border-radius: 50px;
     }
 }
