--- a/src/styles/layout/_sidebar.scss
+++ b/src/styles/layout/_sidebar.scss
@@ -23,6 +23,7 @@
         text-align: left;
         padding-left: 16px;
         padding-bottom: 4px;
+        text-transform: capitalize;
         // cursor: pointer;
 
         &:hover{
