compose box, pop up and img css

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,8 @@
 @import 'components/textfelid';
 @import 'components/dropdown';
 @import 'components/tags';
+@import 'components/popup';
+@import 'components/compose';
 
 // layout
 @import 'layout/header';
