--- a/src/styles/layout/_other.scss
+++ b/src/styles/layout/_other.scss
@@ -86,7 +86,10 @@
 
     &__img{
         position: relative;
-        min-width: 54px;
+        max-width: 54px;
+        width: 54px;
+        height: 54px;
+        border-radius: 50%; 
     }
 
     &__tag{
@@ -114,7 +117,7 @@
         display: inline-block;
         background-color: #f5f5f5;
         border: 1px solid #e5e5e5;
-        padding: 10px 15px;
+        padding: 5px 15px;
         cursor: pointer;
         border-radius: 50px;
     }
