--- a/src/styles/layout/_other.scss
+++ b/src/styles/layout/_other.scss
@@ -84,12 +84,18 @@
         }
     }
 
-    &__img{
+    &__imgContainer{
         position: relative;
         max-width: 54px;
         width: 54px;
         height: 54px;
         border-radius: 50%; 
+    }
+
+    &__picture{
+        border-radius: 50%;
+        width: 54px;
+        height: 54px;
     }
 
     &__tag{
