--- a/src/styles/components/_compose.scss
+++ b/src/styles/components/_compose.scss
@@ -80,3 +80,14 @@
 .shown{
     display: flex;
 }
+
+@keyframes scale-up {
+    0%{
+        transform: scale(0);
+        filter: opacity(0);
+    }
+    100%{
+        transform: scale(1);
+        filter: opacity(1);
+    }
+}
