--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,16 +1,17 @@
 .header{ 
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
     padding: 0px 30px;
     background-color: $white;
-    min-height: 60px;
+    height: 60px;
 
     &__logo{
         display: flex;
         align-items: center;
         font-size:20px;
         letter-spacing: 2px;
+
         .logo-U{
             display: inline-block;
             background-color: black;
