--- a/src/styles/layout/_other.scss
+++ b/src/styles/layout/_other.scss
@@ -1,6 +1,5 @@
 .email{
 
-    width: 90%;
     width: calc(100% - 220px);
 
     // ========= email list ==========
@@ -19,10 +18,7 @@
     }
 
     &__item{
-        display: flex;
-        flex-direction: column;
         background-color: $white;
-        padding: 20px;
         border-bottom: 1px solid #ededed;
         border-left: 3px solid transparent;
         cursor: pointer;
@@ -34,16 +30,15 @@
 
     .active--email{
         border-left: 3px solid $blue;
-        background-color: rgba($color: $steel, $alpha: 0.5);
         background-color: rgba(142, 142, 147, 0.05);
     }
 
    
-    &__details{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
+    // &__details{
+    //     display: flex;
+    //     justify-content: space-between;
+    //     align-items: center;
+    // }
 
     &__subject{
         max-width: 200px;
@@ -55,21 +50,14 @@
     &__reader{
         height: calc(100vh - 60px);
         flex-grow: 1;
-
-        display: flex;
-        flex-direction: column;
         overflow: auto;
     }
 
     &__header{
         background-color: $white;
         flex-basis: 130px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 40px 30px;
         position: relative;
-        flex-wrap: wrap;
+
         &::after{
             content: '';
             display: block;
@@ -84,9 +72,9 @@
     &__imgContainer{
         position: relative;
         max-width: 54px;
-        width: 54px;
-        height: 54px;
-        border-radius: 50%; 
+        // width: 54px;
+        // height: 54px;
+        // border-radius: 50%; 
     }
 
     &__picture{
@@ -106,13 +94,10 @@
         background-color: $white;
         color: #65676e;
         flex-grow: 1;
-        padding: 30px;
         white-space: pre-line;
     }
     
     &__attachments{
-        display: flex;
-        flex-wrap: wrap;
         gap: 10px;
     }
 
@@ -120,8 +105,7 @@
         display: inline-block;
         background-color: #f5f5f5;
         border: 1px solid #e5e5e5;
-        padding: 5px 15px;
-        cursor: pointer;
         border-radius: 50px;
+        cursor: pointer;
     }
 }
