making a file upload element

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,6 +22,7 @@
 @import 'components/tags';
 @import 'components/popup';
 @import 'components/compose';
+@import 'components/drop-zone';
 
 // layout
 @import 'layout/header';
