drag and drop feature done

--- a/src/styles/components/_drop-zone.scss
+++ b/src/styles/components/_drop-zone.scss
@@ -1,5 +1,5 @@
 .drop-zone{
-    max-width: 200px;
+    width: 200px;
     height: 200px;
     border: 4px dashed $gunmetal;
     border-radius: 10px;
