--- a/src/styles/layout/_other.scss
+++ b/src/styles/layout/_other.scss
@@ -101,9 +101,16 @@
 }
 
 .attachment{
-    display: inline-block;
+    // display: inline-block;
     background-color: #f5f5f5;
     border: 1px solid #e5e5e5;
     border-radius: 50px;
     cursor: pointer;
+
+    &__name{
+        max-width: 200px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+    }
 }
