delete attachments & close compose box on send

--- a/src/styles/layout/_other.scss
+++ b/src/styles/layout/_other.scss
@@ -113,4 +113,24 @@
         overflow: hidden;
         white-space: nowrap;
     }
+
+    &__deletebtn{
+        display: none;
+        width: 20px;
+        height: 20px;
+        background-color: transparent;
+    }
+
+}
+
+.email__attachments--show-delete{
+
+    .attachment:hover{
+        svg{
+            display: none;
+        }
+        .attachment__deletebtn{
+            display: inline;
+        }
+    }
 }
