--- a/src/styles/layout/_other.scss
+++ b/src/styles/layout/_other.scss
@@ -112,6 +112,7 @@
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
+        color: $black;
     }
 
     &__deletebtn{
