--- a/src/styles/components/_compose.scss
+++ b/src/styles/components/_compose.scss
@@ -12,8 +12,9 @@
     box-shadow: 0px 0px 20px 0 grey;;
 
     display: none;
-    flex-direction: column;
     animation: scale-up 0.3s forwards;
+
+    // flex-direction: column;
 
     &__titlebar{
         background-color: black;
@@ -22,9 +23,9 @@
         border-top-right-radius: 5px;
         padding: 10px 20px;
 
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        // display: flex;
+        // justify-content: space-between;
+        // align-items: center;
     }
 
     &__closebtn{
@@ -39,38 +40,29 @@
     }
 
     &__email{
-        padding: 10px 20px;
         outline: none;
         border: none;
         border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
     }
 
     &__subject{
-        padding: 10px 20px;
         outline: none;
         border: none;
         border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
     }
 
     &__message{
-        padding: 10px 20px;
         outline: none;
         border: none;
         height: 100%;
         resize: none;
 
-        // visibility: hidden;
         display: none;
-        // position: absolute;
-        // left: 0px;
-        // top: 140px;
-        // width: 100%;
-        // bottom: 48px;
     }
 
     &__toolbar{
         background-color: white;
-        padding: 10px;
+        // padding: 10px;
     }
 
     &__btn{
