--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,19 +1,22 @@
 .header{ 
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0px 30px;
+    // display: flex;
+    // align-items: center;
+    // justify-content: space-between;
+
+    // padding: 0px 30px;
+    
     background-color: $white;
     height: 60px;
 
     &__logo{
-        display: flex;
-        align-items: center;
+        // display: flex;
+        // align-items: center;
+
         font-size:20px;
         letter-spacing: 2px;
 
         .logo-U{
-            display: inline-block;
+            // display: inline-block;
             background-color: black;
             height:20px;
             width: 15px;
